--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <span>实验时长区间设置：</span><span><input type="text" value="60" class="time" id="minDuration">分钟&nbsp;&nbsp;-&nbsp;&nbsp;<input type="text" value="120" class="time" id="maxDuration">分钟</span>
         </div>
         <div>
-          <span>成绩区间设置：</input></span><span><input type="text" value="60" class="time" id="minScore">分钟</input>&nbsp;&nbsp;-&nbsp;&nbsp;<input type="text" value="100" class="time" id="maxScore">分钟</span>
+          <span>成绩区间设置：</input></span><span><input type="text" value="60" class="time" id="minScore">分</input>&nbsp;&nbsp;-&nbsp;&nbsp;<input type="text" value="100" class="time" id="maxScore">分</span>
         </div>
         <div>
           <span>数据生成数量：</span><span><input type="text" value="60" class="time" id="count"></span>
